--- a/cgp/css/hstyles.css
+++ b/cgp/css/hstyles.css
@@ -3,7 +3,7 @@ position: absolute;
 width: 100%;
 height: 100%;
 
-background-image: url("http://127.0.0.1:8887/cgp/css/bgimg.jpg");
+background-image: url("https://raw.githubusercontent.com/vishwa5854/resources/master/cgp/css/bgimg.jpg");
 }
 
 .navbar-brand{
@@ -25,7 +25,7 @@ background-image: url("http://127.0.0.1:8887/cgp/css/bgimg.jpg");
 
 .login{
   display: block;
-  background: url("http://127.0.0.1:8887/cgp/css/bg.svg");
+  background: url("https://raw.githubusercontent.com/vishwa5854/resources/master/css/bg.svg");
   background-repeat: no-repeat;
   background-position: center bottom;
   background-size: 25rem;
